[gd_scene load_steps=2 format=3 uid="uid://ce6lqqyb5xc0f"]

[ext_resource type="Script" path="res://Core/Scripts/AudioControls.gd" id="1_b82n1"]

[node name="Audio Controls" type="GridContainer" node_paths=PackedStringArray("playlist_label", "track_label")]
script = ExtResource("1_b82n1")
playlist_label = NodePath("HBox Container/GridContainer/Playlist")
track_label = NodePath("HBox Container2/GridContainer/Track")

[node name="Music Volume" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Music Volume Label" type="Label" parent="Music Volume"]
layout_mode = 2
size_flags_horizontal = 2
text = "Music Volume"

[node name="Music Volume Slider" type="HSlider" parent="Music Volume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
value = 100.0

[node name="SFX Volume" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="SFX Volume Label" type="Label" parent="SFX Volume"]
layout_mode = 2
size_flags_horizontal = 2
text = "SFX Volume"

[node name="SFX Volume Slider" type="HSlider" parent="SFX Volume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
value = 100.0

[node name="HBox Container" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Playlist Label" type="Label" parent="HBox Container"]
layout_mode = 2
size_flags_horizontal = 2
text = "Playlist"

[node name="GridContainer" type="GridContainer" parent="HBox Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
columns = 3

[node name="Previous Playlist" type="Button" parent="HBox Container/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Prev"

[node name="Playlist" type="Label" parent="HBox Container/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Birbs"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="Next Playlist" type="Button" parent="HBox Container/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Next"

[node name="HBox Container2" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Track Label" type="Label" parent="HBox Container2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Track"

[node name="GridContainer" type="GridContainer" parent="HBox Container2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
columns = 3

[node name="Previous Track" type="Button" parent="HBox Container2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Prev"

[node name="Track" type="Label" parent="HBox Container2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Birbs"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="Next Track" type="Button" parent="HBox Container2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Next"

[connection signal="value_changed" from="Music Volume/Music Volume Slider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="SFX Volume/SFX Volume Slider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="HBox Container/GridContainer/Previous Playlist" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBox Container/GridContainer/Previous Playlist" to="." method="_on_previous_playlist_pressed"]
[connection signal="pressed" from="HBox Container/GridContainer/Next Playlist" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBox Container/GridContainer/Next Playlist" to="." method="_on_next_playlist_pressed"]
[connection signal="pressed" from="HBox Container2/GridContainer/Previous Track" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBox Container2/GridContainer/Previous Track" to="." method="_on_previous_track_pressed"]
[connection signal="pressed" from="HBox Container2/GridContainer/Next Track" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBox Container2/GridContainer/Next Track" to="." method="_on_next_track_pressed"]
